crates/toml/tests/snapshots/invalid/table/multiline-key-02.stderr
TOML parse error at line 1, column 2
  |
1 | ['''tbl''']
  |  ^^^^^^^^^
keys cannot be multi-line literal strings, expected basic string, literal string
